fix: hypertext overflow

--- a/src/components/Hypertext/Hypertext.module.scss
+++ b/src/components/Hypertext/Hypertext.module.scss
@@ -59,3 +59,7 @@
     }
   }
 }
+
+.hypertext > .hypertext-text {
+  display: inline;
+}
